--- a/Clocks.App/Clocks.App.csproj
+++ b/Clocks.App/Clocks.App.csproj
@@ -2,11 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Clocks.Classes\Clocks.Classes.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Iot.Device.Bindings" Version="1.3.0" />
+  </ItemGroup>
+
 
 </Project>
