--- a/Clocks.App/Clocks.App.csproj
+++ b/Clocks.App/Clocks.App.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Iot.Device.Bindings" Version="1.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
 
 
